--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Blog</title>
-        <link rel="stylesheet" type="text/css" href="/css/fichePlante.css">
+        <link rel="stylesheet" type="text/css" href="{{ /css/fichePlante.css | url }}">
         <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
     </head>
