--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
     </head>
     <body>
-        <h1>{{ pageTitle }}</h1>
+      <header><a href="/">Accueil</a></header>
+      <h1>{{ pageTitle }}</h1>
 
-        {{ content }}
+      {{ content }}
     </body>
 </html>
