--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
     </head>
     <body>
-      <header><a href="/">Accueil</a></header>
+      <header><a href="{{ / | url }}">Accueil</a></header>
       <h1>{{ pageTitle }}</h1>
 
       {{ content }}
