fix internal nav

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,12 +4,12 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>My Blog</title>
-        <link rel="stylesheet" type="text/css" href="{{ /css/fichePlante.css | url }}">
+        <link rel="stylesheet" type="text/css" href="{{ '/css/fichePlante.css' | url }}">
         <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
     </head>
     <body>
-      <header><a href="{{ / | url }}">Accueil BB</a></header>
+      <header><a href="{{ '/' | url }}">Accueil</a></header>
       <h1>{{ pageTitle }}</h1>
 
       {{ content }}
