background images and style for posts

--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -13,10 +13,10 @@
       <header>
         <h1>{{ pageTitle }}</h1>
       </header>
-      <section id="section">
+      <section class="section">
         <p>Bienvenue sur mon blog ! <br/> Il est consacré à réunir quelques connaissances personnelles sur les <b>plantes</b> ... Sauvages comestibles, médicinales, aromatiques de toutes branches, je vais classer ici un maximum de renseignements et de liens utiles pour faciliter la reconnaissance et l'utilisation des plantes que l'on rencontre dans notre beau département de l'Aude. <br/> Et comme il est difficile de parler du monde végétal sans inclure les arbres, je joindrais quelques clés pour aider à la reconnaissances des principales essences de notre territoire.</p>
       </section>
-      <section id="section">
+      <section class="section">
         <h3><b>Avant de commencer ...</b></h3>
         <p><strong><span class="danger">Attention :</span> gardez toujours à l'esprit que les plantes, comme les champignons, peuvent être extrèmement toxiques. Il est donc indispensable d'être absolument certain de l'identification exacte de l'espèce avant toute consommation.</strong></p>
               <!-- liens utiles -->
@@ -29,7 +29,7 @@
           </ul>
         </div>
       </section>
-      <section id="section">
+      <section class="section">
         <h3><b>Liste des plantes</b></h3>
         {{ content }}
       </section>
