--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -4,14 +4,22 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>My Blog</title>
+        <link rel="stylesheet" type="text/css" href="{{ '/css/blogPlantes.css' | url }}">
         <link rel="stylesheet" type="text/css" href="{{ '/css/fichePlante.css' | url }}">
         <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
+        <style type="text/css">
+        body {
+          background-image: url("{{ background | url }}");
+        }
+        </style>
     </head>
     <body>
       <header><a href="{{ '/' | url }}">Accueil</a></header>
       <h1>{{ pageTitle }}</h1>
-
-      {{ content }}
+      <div class="section">
+        <h3>{{ subTitle }}</h3>
+        {{ content }}
+      </div>
     </body>
 </html>
