new posts with background url in front matter

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,6 +11,7 @@
         <style type="text/css">
         body {
           background-image: url("{{ background | url }}");
+          background-size: cover;
         }
         </style>
     </head>
