test background for phone

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -12,6 +12,7 @@
         body {
           background-image: url("{{ background | url }}");
           background-size: cover;
+          background-attachment: scroll;
         }
         </style>
     </head>
