--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -23,6 +23,6 @@
         <h3>{{ subTitle }}</h3>
         {{ content }}
       </div>
-      <button><a href="{{ '/' | url }}" id="homeLink">Accueil</a></button>
+      <button><a href="{{ '/' | url }}#{{ pageTitle }}" id="homeLink">Accueil</a></button>
     </body>
 </html>
